--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -27,3 +27,51 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+.header{
+  display: flex;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 16px;
+  align-items: center;
+}
+
+.sidebar{
+  width: 300px;
+  flex-shrink: 0;
+  gap: 16px;
+}
+
+ul{
+  list-style-type: none;
+}
+
+a{
+  font-size: 24px;
+  color: white;
+  text-decoration: none;;
+}
+
+.card{
+  padding: 16px;
+  width: 300px;
+}
+
+.content{
+  display: flex;
+  gap: 24px;
+}
+
+
+.two{
+  padding: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
